# JuryGen

./: .env.example  .gitignore  AI_AGENTS_SETUP.md  API-KEYS-CONFIGURED.md  BACKEND_ONLY_APPROACH.md  CONTRIBUTING.md  CORS_COMPLETE_FIX.md  DOCKER_README.md  EMERGENCY-API-KEY-REVOCATION.md  ENABLE_FIREBASE_AUTH.md  ENABLE_FIREBASE_AUTH_STEPS.md  ERRORS-RESOLVED.md  FIREBASE_FIX_GUIDE.md  FIREBASE_QUICK_FIX.md  FIREBASE_TROUBLESHOOTING.md  FIX_CORS_ISSUE.md  GET_FIREBASE_CONFIG.md  GITHUB-DEPLOYMENT-GUIDE.md  GITHUB-PUSH-INSTRUCTIONS.md  IMMEDIATE_CORS_FIX.md  LICENSE  PRODUCTION_FIREBASE_SETUP.md  QUICK-START.md  README.md  SECURITY-CLEANUP-COMPLETE.md  SETUP.md  SETUP_COMPLETE.md  SIMPLIFIED_SETUP.md  START_SERVERS.md  TASK-3-COMPLETED.md  UPLOAD_ENDPOINTS_FIXED.md  UPLOAD_ISSUE_FIX.md  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix-firebase-env.bat  git-history-cleanup.bat  push-to-github.bat  restart-frontend.bat  (+16 more)
backend/: .env.example  Dockerfile  GOOGLE_CLOUD_SETUP.md  PRODUCTION_READY.md  create_document_ai_processor.py  list_processors.py  monitoring_config.yaml  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup_document_ai.py  setup_google_cloud.py  start_production_server.py  start_server_simple.py  streaming_client_example.js  test_document_ai.py  test_full_functionality.py  test_google_cloud.py  test_jurisdiction_agent.py  test_jurisdiction_pipeline.py  test_jurisdiction_simple.py  test_ocr_agent.py  test_services_simple.py  test_streaming.py
backend/app/: __init__.py  main.py
backend/scripts/: setup_monitoring.py
backend/tests/: conftest.py  test_data_lifecycle.py  test_monitoring.py  (+1 more)
(+215 files in other folders)
